2008-03-17  Satoshi Konno <skonno@cybergarage.org>
	* Changed not to define BOOL type using XCode.
	* Added to check IP_PKTINFO into configure.in.
	* Changed the following functions using void parameter instead of CgService not to conflict the prototype defines.
	   cg_upnp_event_notify_request_setpropertysetnode() and cg_upnp_subscriber_notifyall() using GCC v4.0.
	* Fixed cg_socket_setid() to disable the IPPROTO_IP option using XCode 3.0.
	* Fixed other errors using XCode 3.0.

2007-12-24  Satoshi Konno <skonno@cybergarage.org>
	* Added CG_UPNP_ST_URN and cg_upnp_st_isurn() to <ccontrol.h>.
	* Changed cg_upnp_device_ssdpmessagereceived() using cg_upnp_st_isurn() instead of cg_upnp_st_isurndevice() to find non standard UPnP devices.
	* Changed cg_upnp_service_ssdpmessagereceived() using cg_upnp_st_isurn() instead of cg_upnp_st_isurnservice() to find non standard UPnP devices.
	* Fixed cg_upnp_device_getservicebycontrolurl() to abort when the service_url is null.
	* Fixed cg_string_naddvalue() to comipler using other compilers normally.
	* Added cg_upnp_statevariable_setvaluewithoutnotify() not to send the updated value for other devices which subscribe the service of the state variable.
	* Deprecated cg_upnp_service_notifyallstatevariables(). Use cg_upnp_service_notifyall which can send the events individually or collectively.

2007-12-13  Aapo Makela <aapo.makela@nokia.com>
	* Multiple patches to fix crashes in out-of-memory situations
	* Implemented more efficient reallocation policy in CgString
	* Added proper control point locking in control point HTTP server

2007-11-16  Satoshi Konno <skonno@cybergarage.org>
	* Fixed cg_http_packet_read_body()not to lost data when the response packet is huge.

2007-10-22  Aapo Makela <aapo.makela@nokia.com>
	* Added deb-target to Makefile.am to build Debian packages
	* Fixed copyright notices in source files to match the copyright defined in COPYING
	* Added NULL check to cg_strtrimwhite()